trying to fix image stretch that seems to be happening on Safari (at least on an iPad Pro). testing for section.work entrance animation on mobile (it's too early)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -738,7 +738,7 @@ section.info {
       }
       img {
         width: 100%;
-        height: auto;
+        height: 624px;
         position: relative;
         z-index: -2;
       }
@@ -1997,6 +1997,7 @@ section.info {
           img {
             position: relative;
             transform: translateY(50px);
+            height: auto;
           }
           div.reachOut {
             span.reachOutBody {
